crates/rye/tests/ui/compile-fail/section-in-loop.stderr
error: section cannot be described at here
 --> $DIR/section-in-loop.rs:6:9
  |
6 |         section!(cx, "section", {});
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: section cannot be described at here
  --> $DIR/section-in-loop.rs:13:9
   |
13 |         section!(cx, "section", {});
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: section cannot be described at here
  --> $DIR/section-in-loop.rs:20:9
   |
20 |         section!(cx, "section", {});
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
